# nlp-triagem-inteligente-financeira

./: .gitignore  README.md  pyproject.toml
docs/: blm_glossary.csv  executive_summary.txt  ontology_blm.md  ontology_entities.csv  ontology_relations.csv  preparation_decision_log.csv  risk_register.csv  semantic_hypotheses.csv
notebooks/: 01_business_understanding.html  01_business_understanding.ipynb  02_data_understanding.html  02_data_understanding.ipynb  03_data_preparation__text_cleaning_labeling.html  03_data_preparation__text_cleaning_labeling.ipynb  04_modeling__baseline_tfidf_logreg.html  04_modeling__baseline_tfidf_logreg.ipynb  05_modeling__tranformer_text_classifier.html  05_modeling__tranformer_text_classifier.ipynb  06_evaluation_business_interpretation.html  06_evaluation_business_interpretation.ipynb  07_deployment__monitoring_baseline_api.ipynb  08_executive_conclusion__portfolio_packaging.ipynb  my-template-html-v07.tpl  my-template-html-v09.tpl  my-template-html-v10.tpl  x01_business_understanding.ipynb  x04_modeling__baseline_tfidf_logreg.ipynb
src/api/: main.py  schemas.py
src/domain/: blm_glossary.py  ontology.py
src/features/: label_processing.py  text_cleaning.py
src/monitoring/: logging_utils.py
